# models/api.go
@@ -42,4 +42,26 @@ type Card struct {
 	Available int `json:"available"`
 	Balance int `json:"balance"`
 	CustomerId int `json:"customeriId"`
+	Ts string `json:"ts"`
+}
+
+type Authorisation struct {
+
+	Id int `json:"id"`
+	CardId int `json:"cardId"`
+	VendorId int `json:"vendorId"`
+	Amount int `json:"amount"`
+	Captured int `json:"captured"`
+	Description string `json:"description"`
+	Ts string `json:"ts"`
+}
+
+type Movement struct {
+
+	Id int `json:"id"`
+	CardId int `json:"cardId"`
+	MovementType string `json:"movementType"`
+	Amount int `json:"amount"`
+	Description string `json:"description"`
+	Ts string `json:"ts"`
 }
